Added viewer #2 using AngularJS UI-GRID for display

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
                     </h3>
                     <md-divider></md-divider>
                 </div>
+                <div class="md-list-item-text">
+                    <h3>
+                        <md-icon md-font-icon="fa fa-user">
+                        </md-icon>
+                        <a class="md-button" href="#/log-viewer2" ng-click="toggleSidebar()">STARS Log Viewer #2</a>
+                    </h3>
+                    <md-divider></md-divider>
+                </div>
                 <h5 flex="" class="sticky-bottom">STARS Log Viewer</h5>
             </md-content>
         </md-sidenav>
@@ -73,6 +81,7 @@
     <!-- app files -->
     <script src="app/app.js"></script>
     <script src="app/log-viewer1/log-viewer1.js"></script>
+    <script src="app/log-viewer2/log-viewer2.js"></script>
     <script src="app/login/login.js"></script>
 </body>
 </html>
